...
                                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nsN-mi-Jhr" customClass="BorderedButton" customModule="freestyle_timer_ios" customModuleProvider="tar
                                                <rect key="frame" x="122.5" y="0.0" width="114" height="50"/>
                                                <state key="normal" title="Select">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                </state>
...
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Freestyle Timer" id="Mg6-Eg-fIg">
                        <barButtonItem key="rightBarButtonItem" image="settings-icon" style="done" id="JfN-NJ-gLF">
                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                        <rect key="frame" x="0.0" y="158.5" width="343" height="107.5"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="250" text="3:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kFZ-dl-r7v">
                                                <rect key="frame" x="0.0" y="0.0" width="343" height="107.5"/>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="90"/>
...
        <scene sceneID="gRv-XX-nXF">
            <objects>
                <viewControllerPlaceholder storyboardName="Settings" id="2od-B6-Ddv" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="yP5-HG-ktE" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
                                <rect key="frame" x="0.0" y="0.0" width="375" height="333"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Battle" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aQl-5N-UUe">
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="105.5"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
...
                                <rect key="frame" x="0.0" y="0.0" width="375" height="333"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Qualification" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DvZ-lp-yXC">
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="105.5"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
...
