...
                                            </subviews>
                                        </tableViewCellContentView>
                                        <connections>
                                            <segue destination="XXQ-8T-hYH" kind="show" identifier="roundDurationOption" id="Zgi-FZ-g0f"/>
                                        </connections>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="GtB-eL-bDD" detailTextLabel="ymd-ds-xdb" style="IBUITableViewCellStyleValue1" id="Joi-0c-O59" userLabel="Number of rounds">
                                        <rect key="frame" x="0.0" y="143.5" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Joi-0c-O59" id="ooW-4g-EVs">
                                            <rect key="frame" x="0.0" y="0.0" width="342" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
...
                                        </tableViewCellContentView>
                                    </tableViewCell>
                                </cells>
                            </tableViewSection>
                            <tableViewSection headerTitle="Qualification mode" id="A7C-db-0ux">
                                <cells>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="9ov-Jc-s78" detailTextLabel="Itx-xT-b2l" style="IBUITableViewCellStyleValue1" id="Pan-Sq-6eb" userLabel="Duration">
                                        <rect key="frame" x="0.0" y="331.5" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Pan-Sq-6eb" id="157-dD-XtZ">
                                            <rect key="frame" x="0.0" y="0.0" width="342" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
...
